fix(Footer): Fixes footer to be center aligned, and adds twitter button issue #47 (#119)
* Aligning footer center, and adding twitter button

* Aligning footer center, and adding twitter button

* Aligning footer center, and adding twitter button

* Removing unused class

* adding original package-lock.json back

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -41,7 +41,17 @@ a {
     font-weight: 600;
 }
 
+@media (max-width: 736px) {
+    .nav-footer {
+        text-align: center;
+        margin:auto;
+    }
 
+    .nav-home {
+        margin:auto !important; 
+    }
+
+}
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
